--- a/cirrus-docs-next/package.json
+++ b/cirrus-docs-next/package.json
@@ -29,7 +29,7 @@
     "react-dom": "16.14.0",
     "react-intersection-observer": "^8.33.1",
     "react-lazyload": "^3.0.0",
-    "react-markdown": "^5.0.0",
+    "react-markdown": "6.0.3",
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.2.1",
     "react-text-loop": "^2.3.0",
